<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkgrnd">
    <TextView
        android:id="@+id/TextView_FavPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/help_text_size"
        android:textStyle="bold"
        android:text="@string/settings_favoriteplace"></TextView>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/EditText_FavPlaceName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:width="@dimen/fav_place_textbox_size"
            android:text="@string/settings_favplace_currentlocation"></EditText>
        <Button
            android:id="@+id/Button_MapIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_favplace_map"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/EditText_FavPlaceName"></Button>
    </RelativeLayout>
    <TextView
        android:id="@+id/TextView_FavPlaceCoords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/help_text_size"
        android:textStyle="bold"
        android:text="@string/settings_favplace_coords"></TextView>
    <TextView
        android:id="@+id/TextView_FavPlaceCoords_Info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/help_text_size"
        android:textStyle="bold"></TextView>
</LinearLayout>